apps/shiplog/tests/workstreams/snapshots/workstreams__format_stability__workstreams_yaml_empty.snap
---
source: apps/shiplog/tests/workstreams/format_stability.rs
assertion_line: 124
expression: text
---
version: 1
generated_at: 2025-06-01T12:00:00Z
workstreams: []
