apps/shiplog/tests/workstreams/snapshots/workstreams__format_stability__workstreams_yaml_minimal.snap
---
source: apps/shiplog/tests/workstreams/format_stability.rs
assertion_line: 152
expression: text
---
version: 1
generated_at: 2025-06-01T12:00:00Z
workstreams:
- id: 1f6fa6f69d185e6086d04e7330361bf9001a3b8d0ce511171055dc34eb90c1c5
  title: x
  summary: null
  tags: []
  stats:
    pull_requests: 0
    reviews: 0
    manual_events: 0
  events: []
  receipts: []
